--- a/tools/typeform-track-cleaning/config.yml
+++ b/tools/typeform-track-cleaning/config.yml
@@ -1,15 +1,16 @@
 
 source:
-  csv: C:\Users\andre\Downloads\responses.csv
-  separator: ','
+  csv: C:\Users\andre\Desktop\the_real_thing\Participants_complete.csv
+  separator: ';'
   columns:
-    - name: "What is your first name?"
-    - last name: "What is your last name?"
-    - email: "Under which *email* can we reach out to you during the bootcamp?"
-    - track: "In our #codeathome Bootcamp, you can choose between four tracks: Data Science, Web Development, Artificial Intelligence, and UX Design. *Which track are you interested in and how will this track help your personal or professional development?*"
+    - name: name
+    - last name: last name
+    - email: email
+    - track: track
 
 output:
-  csv: C:\Users\andre\Downloads\responses-out.csv
+  csv: C:\Users\andre\Desktop\the_real_thing\responses-out.csv
+  separator: ';'
 
 tracks:
   AI:
